--- a/demos/app/grid-column-resizing/sample.component.html
+++ b/demos/app/grid-column-resizing/sample.component.html
@@ -1,9 +1,13 @@
 <div class="wrapper">
-    <igx-grid #grid1 [data]="data" [width]="'900px'" [height]="'800px'">
+    <igx-grid #grid1 [data]="data" [width]="'900px'" [height]="'500px'">
         <igx-column *ngFor="let c of columns" [field]="c.field"
                                               [header]="c.field"
+                                              [movable]="true"
                                               [resizable]="c.resizable"
                                               [width]="c.width"
+                                              [sortable]="true"
+                                              [filterable]="true"
+                                              [hasSummary]="c.summary"
                                               [minWidth]="c.minWidth"
                                               [maxWidth]="c.maxWidth">
         </igx-column>
