--- a/demos/app/grid-column-resizing/sample.component.html
+++ b/demos/app/grid-column-resizing/sample.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <igx-grid #grid1 [data]="data" [width]="'900px'" [height]="'500px'">
+    <igx-grid #grid1 [data]="data" [rowSelectable]="true" [width]="'900px'" [height]="'500px'">
         <igx-column *ngFor="let c of columns" [field]="c.field"
                                               [header]="c.field"
                                               [movable]="true"
