--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -22,17 +22,17 @@
         <div style="width: 80%">
             <igx-input-group>
                 <input igxInput name="comboInput" type="text" [(ngModel)]="value" width="90%" readonly/>
+                <igx-suffix igxButton="icon" igxRipple igxRippleCentered="true" (click)="triggerSelectionChange([])">
+                    <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
+                </igx-suffix>
+                <igx-suffix igxButton="icon" class="dropdownToggleButton" igxRipple igxRippleCentered="true" (click)="dropdown.toggle()">
+                    <igx-icon *ngIf="dropdown.collapsed; else toggleUp" fontSet="material" name="arrow_drop_down"></igx-icon>
+                    <ng-template #toggleUp>
+                        <igx-icon fontSet="material" name="arrow_drop_up"></igx-icon>
+                    </ng-template>
+                </igx-suffix>
             </igx-input-group>
         </div>
-        <span igxButton="icon" igxRipple igxRippleCentered="true" (click)="triggerSelectionChange([])">
-            <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
-        </span>
-        <span igxButton="icon" class="dropdownToggleButton" igxRipple igxRippleCentered="true" (click)="dropdown.toggle()">
-            <igx-icon *ngIf="dropdown.collapsed; else toggleUp" fontSet="material" name="arrow_drop_down"></igx-icon>
-            <ng-template #toggleUp>
-                <igx-icon fontSet="material" name="arrow_drop_up"></igx-icon>
-            </ng-template>
-        </span>
     </div>
     <ng-container *ngIf="!dropdown.collapsed">
         <igx-input-group>
