--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -21,7 +21,9 @@
     <div style="display: flex; flex-direction: row; align-items: flex-end; align-content: space-between;">
         <div style="width: 80%">
             <igx-input-group>
-                <input igxInput name="comboInput" type="text" [(ngModel)]="value" width="90%" readonly/>
+
+                <input igxInput #comboInput name="comboInput" (keydown)="onArrowDown($event)" type="text" [(ngModel)]="value" width="90%" tabindex="0" readonly/>
+                
                 <igx-suffix igxButton="icon" igxRipple igxRippleCentered="true" (click)="triggerSelectionChange([])">
                     <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
                 </igx-suffix>
