--- a/src/core/styles/components/drop-down/_drop-down-theme.scss
+++ b/src/core/styles/components/drop-down/_drop-down-theme.scss
@@ -228,6 +228,7 @@
 
         &:hover {
             background: --var($theme, 'selected-item-background');
+            color: --var($theme, 'selected-item-text-color');
         }
 
         &:focus {
