--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -29,6 +29,7 @@
 @import '../components/card/card-component';
 @import '../components/carousel/carousel-component';
 @import '../components/checkbox/checkbox-component';
+@import '../components/combo/combo-component';
 @import '../components/date-picker/date-picker-component';
 @import '../components/dialog/dialog-component';
 @import '../components/drop-down/drop-down-component';
