--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -10,7 +10,7 @@
 <ng-template #addItem>
 
     There are no items to be displayed.
-    <div style="border: 1px dashed #3f3f3f;" (click)="addItemToCollection()">Add Item</div>
+    <div (click)="addItemToCollection()">Add Item</div>
 
 </ng-template>
 <ng-template #headerItemBase let-item let-key="valueKey" let-groupKey="groupKey">
@@ -23,7 +23,7 @@
             <igx-input-group>
 
                 <input igxInput #comboInput name="comboInput" (keydown)="onArrowDown($event)" type="text" [(ngModel)]="value" width="90%" tabindex="0" readonly/>
-                
+
                 <igx-suffix igxButton="icon" igxRipple igxRippleCentered="true" (click)="triggerSelectionChange([])">
                     <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
                 </igx-suffix>
@@ -36,17 +36,29 @@
             </igx-input-group>
         </div>
     </div>
+    <igx-input-group>
+        <input igxInput name="comboInput" type="text" [(ngModel)]="value" width="90%" readonly/>
+        <igx-suffix igxButton="icon" igxRipple (click)="triggerSelectionChange([])">
+            <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
+        </igx-suffix>
+        <igx-suffix igxButton="icon" class="dropdownToggleButton" igxRipple (click)="dropdown.toggle()">
+            <igx-icon *ngIf="dropdown.collapsed; else toggleUp" fontSet="material" name="arrow_drop_down"></igx-icon>
+            <ng-template #toggleUp>
+                <igx-icon fontSet="material" name="arrow_drop_up"></igx-icon>
+            </ng-template>
+        </igx-suffix>
+    </igx-input-group>
     <ng-container *ngIf="!dropdown.collapsed">
-        <igx-input-group>
-            <input igxInput #searchInput name="searchInput" type="text" tabindex="1" [(ngModel)]="searchValue"
-                (keyup)="handleKeyDown($event)" placeholder="Enter a search term" />
+        <igx-input-group class="igx-combo__search">
+            <input class="igx-combo-input" igxInput #searchInput name="searchInput" type="text" tabindex="1" [(ngModel)]="searchValue"
+                   (keyup)="handleKeyDown($event)" placeholder="Enter a search term" />
         </igx-input-group>
-        <!-- <div>
-            Select All:
-            <igx-checkbox #selectAllCheckbox (change)="handleSelectAll($event)"></igx-checkbox>
-        </div> -->
+        <!-- <div>-->
+            <!--Select All:-->
+            <!--<igx-checkbox #selectAllCheckbox (change)="handleSelectAll($event)"></igx-checkbox>-->
+        <!--</div>-->
     </ng-container>
-    <igx-combo-drop-down #igxComboDropDown [igxDropDownItemNavigation]="dropdown" [width]="width" tabindex="2">
+    <igx-combo-drop-down #igxComboDropDown class="igx-combo__drop-down" [igxDropDownItemNavigation]="dropdown" [width]="width" tabindex="2">
         <ng-container *ngIf="!dropdown.collapsed">
             <ng-container *ngTemplateOutlet="dropdownHeader; context: {$impicit: this}">
             </ng-container>
