--- a/demos/app/grid-column-moving/sample.component.html
+++ b/demos/app/grid-column-moving/sample.component.html
@@ -1,9 +1,15 @@
 <div class="wrapper">
-    <igx-grid #grid1 [data]="data" [width]="'900px'" [height]="'800px'">
+    <igx-grid #grid1 [data]="data" (onColumnMovingStart)="onColumnMovingStart($event)" (onColumnMoving)="onColumnMoving($event)" (onColumnMovingEnd)="onColumnMovingEnd($event)" [rowSelectable]="true" [paging]="false" [width]="'900px'" [height]="'500px'">
         <igx-column *ngFor="let c of columns" [field]="c.field"
                                               [header]="c.field"
+                                              [movable]="c.movable"
                                               [resizable]="c.resizable"
                                               [width]="c.width"
+                                              [sortable]="true"
+                                              [filterable]="true"
+                                              [editable]="true"
+                                              [hidden]="c.hidden"
+                                              [hasSummary]="c.summary"
                                               [minWidth]="c.minWidth"
                                               [maxWidth]="c.maxWidth">
         </igx-column>
