style(igx-combo): change the button class to follow BEM

--- a/src/core/styles/components/combo/_combo-theme.scss
+++ b/src/core/styles/components/combo/_combo-theme.scss
@@ -49,4 +49,8 @@
         border-bottom: 1px dashed #ddd;
         box-shadow: $dd-shadow;
     }
+
+    .igx-combo__toggle-btn {
+        position: relative;
+    }
 }
