--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -1,53 +1,45 @@
 <ng-template #complex let-display let-data="data" let-key="valueKey">
     {{display[key]}}
 </ng-template>
+
 <ng-template #primitive let-display>
     {{display}}
 </ng-template>
+
 <ng-template #empty>
     <span>The list is empty</span>
 </ng-template>
-<ng-template #addItem>
 
+<ng-template #addItem>
     There are no items to be displayed.
     <div (click)="addItemToCollection()">Add Item</div>
-
 </ng-template>
+
 <ng-template #headerItemBase let-item let-key="valueKey" let-groupKey="groupKey">
     {{ item[key] }}
 </ng-template>
 
 <div class="igx-combo" [style.width]="width">
-    <div style="display: flex; flex-direction: row; align-items: flex-end; align-content: space-between;">
-        <div style="width: 80%">
-            <igx-input-group>
-
-                <input igxInput #comboInput name="comboInput" (keydown)="onArrowDown($event)" type="text" [(ngModel)]="value" width="90%" tabindex="0" readonly/>
-
-                <igx-suffix igxButton="icon" igxRipple igxRippleCentered="true" (click)="triggerSelectionChange([])">
-                    <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
-                </igx-suffix>
-                <igx-suffix igxButton="icon" class="dropdownToggleButton" igxRipple igxRippleCentered="true" (click)="dropdown.toggle()">
-                    <igx-icon *ngIf="dropdown.collapsed; else toggleUp" fontSet="material" name="arrow_drop_down"></igx-icon>
-                    <ng-template #toggleUp>
-                        <igx-icon fontSet="material" name="arrow_drop_up"></igx-icon>
-                    </ng-template>
-                </igx-suffix>
-            </igx-input-group>
-        </div>
-    </div>
     <igx-input-group>
+
         <input igxInput name="comboInput" type="text" [(ngModel)]="value" width="90%" readonly/>
+
         <igx-suffix igxButton="icon" igxRipple (click)="triggerSelectionChange([])">
             <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
         </igx-suffix>
-        <igx-suffix igxButton="icon" class="dropdownToggleButton" igxRipple (click)="dropdown.toggle()">
+
+        <igx-suffix igxButton="icon" class="igx-combo__toggle-btn" igxRipple (click)="dropdown.toggle()">
+
             <igx-icon *ngIf="dropdown.collapsed; else toggleUp" fontSet="material" name="arrow_drop_down"></igx-icon>
+
             <ng-template #toggleUp>
                 <igx-icon fontSet="material" name="arrow_drop_up"></igx-icon>
             </ng-template>
+
         </igx-suffix>
+
     </igx-input-group>
+
     <ng-container *ngIf="!dropdown.collapsed">
         <igx-input-group class="igx-combo__search">
             <input class="igx-combo-input" igxInput #searchInput [igxDropDownItemNavigation]="dropdown" name="searchInput" type="text" [(ngModel)]="searchValue"
@@ -58,13 +50,14 @@
             <!--<igx-checkbox #selectAllCheckbox (change)="handleSelectAll($event)"></igx-checkbox>-->
         <!--</div>-->
     </ng-container>
+
     <igx-combo-drop-down #igxComboDropDown class="igx-combo__drop-down" [width]="width">
         <ng-container *ngIf="!dropdown.collapsed">
             <ng-container *ngTemplateOutlet="dropdownHeader; context: {$impicit: this}">
             </ng-container>
         </ng-container>
-        <ng-container *ngIf="!dropdown.collapsed">
 
+        <ng-container *ngIf="!dropdown.collapsed">
             <div style="position: relative;">
                 <ng-template igxFor let-item [igxForOf]="data | comboFiltering:filteringExpressions:filteringLogic:caller:pipeTrigger" [igxForScrollOrientation]="'vertical'"
                     [igxForContainerSize]="listHeight" [igxForItemSize]="listItemHeight">
@@ -81,15 +74,17 @@
                     </igx-combo-item>
                 </ng-template>
             </div>
+
             <div *ngIf="filteredData.length === 0" style="text-align: center;">
                 <ng-container *ngTemplateOutlet="addItemTemplate ? addItemTemplate : addItem; context: {$impicit: this}">
-
-
                 </ng-container>
             </div>
+
         </ng-container>
+
         <ng-container *ngIf="!dropdown.collapsed">
             <ng-container *ngTemplateOutlet="dropdownFooter; context: {$impicit: this}"></ng-container>
         </ng-container>
+
     </igx-combo-drop-down>
 </div>
