--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -62,7 +62,9 @@ $my-nav-theme: igx-navbar-theme(
 
 $my-dd-theme: igx-drop-down-theme(
     $selected-item-background: igx-color($default-palette, 'primary', 100),
-    $header-text-color: #09f
+    $header-text-color: #09f,
+    $selected-hover-item-background: igx-color($default-palette, 'primary', 200),
+    $selected-focus-item-background: igx-color($default-palette, 'primary', 200)
 );
 
 $my-input-theme: igx-input-group-theme(
@@ -79,4 +81,6 @@ $my-input-theme: igx-input-group-theme(
 .igx-combo__search {
     @include igx-input-group($my-input-theme);
 }
+
+
 
