--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -34,7 +34,7 @@
             </igx-input-group>
     <ng-container *ngIf="!dropdown.collapsed">
         <igx-input-group class="igx-combo__search">
-            <input class="igx-combo-input" igxInput #searchInput name="searchInput" type="text"  tabindex="1" [(ngModel)]="searchValue"
+            <input class="igx-combo-input" igxInput #searchInput name="searchInput" type="text" [igxDropDownItemNavigation]="dropdown" tabindex="1" [(ngModel)]="searchValue"
                 (keyup)="handleKeyDown($event)" placeholder="Enter a search term" />
         </igx-input-group>
         <!-- <div>
@@ -42,7 +42,7 @@
             <igx-checkbox #selectAllCheckbox (change)="handleSelectAll($event)"></igx-checkbox>
         </div> -->
     </ng-container>
-    <igx-combo-drop-down #igxComboDropDown class="igx-combo__drop-down" [igxDropDownItemNavigation]="dropdown" tabindex="2" [width]="width">
+    <igx-combo-drop-down #igxComboDropDown class="igx-combo__drop-down" [width]="width">
         <ng-container *ngIf="!dropdown.collapsed">
             <ng-container *ngTemplateOutlet="dropdownHeader; context: {$impicit: this}">
             </ng-container>
