feat(igx-combo): alt + ArrowUp/ArrowDown close/open dropdown, #1260

--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -20,7 +20,7 @@
 <div class="igx-combo" [style.width]="width">
             <igx-input-group>
 
-                <input igxInput name="comboInput" type="text" [(ngModel)]="value" width="90%" tabindex="0" readonly/>
+                <input igxInput #comboInput name="comboInput" type="text" [(ngModel)]="value" width="90%" tabindex="0" readonly/>
                 
         <igx-suffix igxButton="icon" igxRipple (click)="triggerSelectionChange([])">
                     <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
