feat(igx-combo): keyboard navigation on virtual combo items #1260

--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -53,7 +53,7 @@
 
             <div style="position: relative;">
                 <ng-template igxFor let-item [igxForOf]="data | comboFiltering:filteringExpressions:filteringLogic:caller:pipeTrigger" [igxForScrollOrientation]="'vertical'"
-                    [igxForContainerSize]="listHeight" [igxForItemSize]="listItemHeight">
+                    [igxForContainerSize]="listHeight" [igxForItemSize]="listItemHeight" #virtualScrollContainer>
                     <igx-combo-item [itemData]="item" isHeader={{item.isHeader}}>
                         <ng-container *ngIf="!item.isHeader">
                             <igx-checkbox [checked]="isItemSelected(item)" disableRipple="true" disabled="true"></igx-checkbox>
