test(igx-combo): add unit tests, convert public methods to private, #1260

--- a/demos/app/combo/sample.component.html
+++ b/demos/app/combo/sample.component.html
@@ -5,6 +5,7 @@
         <button class="igx-button--flat" igxRipple (click)="changeData()">Initial</button>
         <button class="igx-button--flat" igxRipple (click)="changeData('primitive')">Primitve</button>
         <button class="igx-button--flat" igxRipple (click)="changeData('complex')">Complex</button>
+        <button class="igx-button--flat" igxRipple (click)="toggleItem('Connecticut')">Toggle "Connecticut"</button>
 
         <igx-combo [placeholder]="'Location'"
         (onAddition)="handleAddition($event)"
