fix(igx-combo): adjust incorrect deselectAll call in template, #1260

--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -22,7 +22,7 @@
 
                 <input igxInput #comboInput name="comboInput" type="text" [(ngModel)]="value" width="90%" tabindex="0" readonly/>
                 
-        <igx-suffix igxButton="icon" igxRipple (click)="deselectAllItems([])">
+        <igx-suffix igxButton="icon" igxRipple (click)="deselectAllItems()">
                     <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
                 </igx-suffix>
         <igx-suffix igxButton="icon" class="dropdownToggleButton" igxRipple (click)="dropdown.toggle()">
