--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -69,7 +69,7 @@ $my-dd-theme: igx-drop-down-theme(
 
 $my-input-theme: igx-input-group-theme(
     $idle-bottom-line-color: transparent,
-    $hover-bottom-line-color: #ddd,
+    $hover-bottom-line-color: transparent,
     $filled-bottom-line-color: #09f
 );
 
