chore(igx-combo): escape in search field closes combo

--- a/demos/app/combo/sample.component.html
+++ b/demos/app/combo/sample.component.html
@@ -14,7 +14,7 @@
                 <input igxInput name="lastName" placeholder="Last Name"/>
             </igx-input-group>
             <div style="clear: both;"></div>
-            <igx-combo class="input-container" [placeholder]="'Location'"
+            <igx-combo class="input-container" [placeholder]="'Location(s)'"
                 (onAddition)="handleAddition($event)"
                 [data]="items"
                 [filterable]="true" [textKey]="'field'" [valueKey]="'field'"
