--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -19,7 +19,7 @@
 
 <div class="igx-combo" [style.width]="width">
     <igx-input-group (click)="dropdown.toggle()" type="box">
-        <input igxInput #comboInput name="comboInput" type="text" [(ngModel)]="value" width="90%" tabindex="0" readonly [placeholder]="placeholder"/>
+        <input (focus)="onInputFocus($event)" igxInput #comboInput name="comboInput" type="text" [(ngModel)]="value" width="90%" readonly [placeholder]="placeholder"/>
         <igx-suffix igxButton="icon" igxRipple (click)="deselectAllItems()">
                     <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
                 </igx-suffix>
