--- a/src/combo/combo.component.html
+++ b/src/combo/combo.component.html
@@ -19,37 +19,39 @@
 
 <div class="igx-combo" [style.width]="width">
     <igx-input-group (click)="dropdown.toggle()" type="box">
-        <input (focus)="onInputFocus($event)" igxInput #comboInput name="comboInput" type="text" [(ngModel)]="value" width="90%" readonly [placeholder]="placeholder"/>
+        <input (focus)="onInputFocus($event)" igxInput #comboInput name="comboInput" type="text" [(ngModel)]="value" width="90%"
+            readonly [placeholder]="placeholder" />
         <igx-suffix igxButton="icon" igxRipple (click)="deselectAllItems()">
-                    <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
-                </igx-suffix>
+            <igx-icon *ngIf="value.length" fontSet="material" name="clear"></igx-icon>
+        </igx-suffix>
         <igx-suffix igxButton="icon" class="dropdownToggleButton" igxRipple>
-                    <igx-icon *ngIf="dropdown.collapsed; else toggleUp" fontSet="material" name="arrow_drop_down"></igx-icon>
-                    <ng-template #toggleUp>
-                        <igx-icon fontSet="material" name="arrow_drop_up"></igx-icon>
-                    </ng-template>
-                </igx-suffix>
-            </igx-input-group>
+            <igx-icon *ngIf="dropdown.collapsed; else toggleUp" fontSet="material" name="arrow_drop_down"></igx-icon>
+            <ng-template #toggleUp>
+                <igx-icon fontSet="material" name="arrow_drop_up"></igx-icon>
+            </ng-template>
+        </igx-suffix>
+    </igx-input-group>
     <ng-container *ngIf="!dropdown.collapsed">
         <igx-input-group class="igx-combo__search">
-            <input class="igx-combo-input" igxInput #searchInput name="searchInput" type="text" [(ngModel)]="searchValue"
-                (input)="handleInputChange()" (keyup)="handleKeyDown($event)" placeholder="Enter a search term" />
+            <input class="igx-combo-input" igxInput #searchInput name="searchInput" type="text" [(ngModel)]="searchValue" (input)="handleInputChange()"
+                (keyup)="handleKeyDown($event)" placeholder="Enter a search term" />
         </igx-input-group>
         <!-- <div>
             Select All:
             <igx-checkbox #selectAllCheckbox (change)="handleSelectAll($event)"></igx-checkbox>
         </div> -->
     </ng-container>
-    <igx-combo-drop-down #igxComboDropDown class="igx-combo__drop-down" [igxDropDownItemNavigation]="dropdown" [tabindex]="dropdown.collapsed ? -1 : 0" [width]="width">
+    <igx-combo-drop-down #igxComboDropDown class="igx-combo__drop-down" [igxDropDownItemNavigation]="dropdown" [tabindex]="dropdown.collapsed ? -1 : 0"
+        [width]="width">
         <ng-container *ngIf="!dropdown.collapsed">
             <ng-container *ngTemplateOutlet="dropdownHeader; context: {$impicit: this}">
             </ng-container>
         </ng-container>
         <ng-container *ngIf="!dropdown.collapsed">
-
-            <div style="position: relative; overflow: hidden;"  [style.height.px]="listHeight">
-                <ng-template igxFor let-item [igxForOf]="data | comboFiltering:filteringExpressions:filteringLogic | comboSorting:sortingExpressions | comboGrouping:groupKey" [igxForScrollOrientation]="'vertical'"
-                    [igxForContainerSize]="listHeight" [igxForItemSize]="listItemHeight" #virtualScrollContainer>
+            <div style="position: relative; overflow: hidden;" [style.height.px]="listHeight">
+                <ng-template igxFor let-item [igxForOf]="data | comboFiltering:filteringExpressions:filteringLogic | comboSorting:sortingExpressions | comboGrouping:groupKey"
+                    [igxForScrollOrientation]="'vertical'" [igxForContainerSize]="listHeight" [igxForItemSize]="listItemHeight"
+                    #virtualScrollContainer>
                     <igx-combo-item [itemData]="item" isHeader={{item.isHeader}}>
                         <ng-container *ngIf="!item.isHeader">
                             <igx-checkbox [checked]="isItemSelected(item)" disableRipple="true" disabled="true"></igx-checkbox>
@@ -63,15 +65,13 @@
                     </igx-combo-item>
                 </ng-template>
             </div>
-            <div *ngIf="filteredData.length === 0" style="text-align: center;">
-                <ng-container *ngTemplateOutlet="addItemTemplate ? addItemTemplate : addItem; context: {$impicit: this}">
-
-
-                </ng-container>
-            </div>
         </ng-container>
         <ng-container *ngIf="!dropdown.collapsed">
             <ng-container *ngTemplateOutlet="dropdownFooter; context: {$impicit: this}"></ng-container>
         </ng-container>
+        <igx-combo-item *ngIf="searchValue.length !== 0 && customValueFlag" style="text-align: center;">
+            <ng-container *ngTemplateOutlet="addItemTemplate ? addItemTemplate : addItem; context: {$impicit: this}">
+            </ng-container>
+        </igx-combo-item>
     </igx-combo-drop-down>
 </div>
